# allen_interval_algebra

./: Cargo.toml  README.md
src/: interval.rs  lib.rs
tests/: testing_algebra.rs
